# borax-cli

./: AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
borax/: __init__.py  bibtex_exporter.py  cli.py  default_vocab.json  default_vocab.yaml  history_tracker.py  init_library.py  library_config.py  metadata_fetcher.py  tagging.py  utils.py
borax/bibtex_exporter/: __init__.py  metadata_fetcher.py
borax/core/: __init__.py  history_tracker.py  init_library.py  library_config.py  utils.py
borax/tagging/: __init__.py
tests/: README.md
tests/data/unit/: borax-library.json  vocab.json
tests/integration/: conftest.py  test_cli_bibtex.py  test_cli_history.py  test_cli_scan.py  test_cli_summary.py  test_cli_tag.py
tests/tools/: generate_fixtures.py
tests/unit/: conftest.py  test_bibtex_exporter.py  test_history_tracker.py  test_library_config.py  test_tagging_keywords.py
