[tool.poetry]
name = "borax"
version = "0.4.1-2"
description = "Borax — Book Organizer and Research Article arXiver"
authors = ["Mykhailo Shevchuk <mail+dev@mshevchuk.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "borax", format = ["sdist"] }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.5"
poethepoet = "^0.25.0"
reportlab = "^4.0"

[tool.poetry.scripts]
borax = "borax.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

# -------------------------------
# Poe Tasks
# -------------------------------

[tool.poe.tasks]
unit = "pytest tests/unit -q"
integration = "pytest tests/integration -q"
test = "pytest tests -q"
coverage = "pytest tests --cov=borax --cov-report=term-missing"
lint = "ruff check ."
format = "ruff format ."
check-all = "pytest tests --cov=borax --cov-report=term-missing"
